the last fix showed that, the width declaration breaks the boxes, so i removed it
git-svn-id: svn://svn.zope.org/repos/main@67985 62d5b8a3-27da-0310-9561-8e5933582275

--- a/Zope3/trunk/src/zope/app/boston/browser/skin.css
+++ b/Zope3/trunk/src/zope/app/boston/browser/skin.css
@@ -310,7 +310,6 @@ table {
 }
 
 .slotbox div.header {
-    width: 100%;
 	height: 22px;
 	color: white;
 	font-weight: bold;
